[gd_scene load_steps=4 format=3 uid="uid://buxwaf372muxx"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_cill0"]
[ext_resource type="Theme" uid="uid://dxjcv6y7qoybk" path="res://theme.tres" id="2_7sgx7"]
[ext_resource type="PackedScene" uid="uid://4ko233cyvmvj" path="res://scenes/menu.tscn" id="3_qwae4"]

[node name="PauseMenu" type="MarginContainer"]
offset_right = 640.0
offset_bottom = 360.0
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80
script = ExtResource("1_cill0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_7sgx7")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
text = "Pause"

[node name="MenuContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Menu" parent="VBoxContainer/MenuContainer" instance=ExtResource("3_qwae4")]
modulate = Color(1, 1, 1, 0.862745)
layout_mode = 2

[node name="ButtonContainer" type="MarginContainer" parent="VBoxContainer/MenuContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 10

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer/MenuContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Resume" type="Button" parent="VBoxContainer/MenuContainer/ButtonContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_7sgx7")
theme_override_font_sizes/font_size = 16
text = "Resume"

[node name="Restart" type="Button" parent="VBoxContainer/MenuContainer/ButtonContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_7sgx7")
theme_override_font_sizes/font_size = 16
text = "Restart"

[node name="Settings" type="Button" parent="VBoxContainer/MenuContainer/ButtonContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_7sgx7")
theme_override_font_sizes/font_size = 16
text = "Settings"

[node name="ExitToTitle" type="Button" parent="VBoxContainer/MenuContainer/ButtonContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_7sgx7")
theme_override_font_sizes/font_size = 16
text = "Exit to Title"

[node name="Quit" type="Button" parent="VBoxContainer/MenuContainer/ButtonContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_7sgx7")
theme_override_font_sizes/font_size = 16
text = "Quit"

[connection signal="pressed" from="VBoxContainer/MenuContainer/ButtonContainer/Buttons/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuContainer/ButtonContainer/Buttons/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuContainer/ButtonContainer/Buttons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuContainer/ButtonContainer/Buttons/ExitToTitle" to="." method="_on_exit_to_title_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuContainer/ButtonContainer/Buttons/Quit" to="." method="_on_quit_pressed"]
